# NumeralSystemConverter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  controller.cpp  controller.h  converter.cpp  converter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
